Fix site z-index values

--- a/css/site.css
+++ b/css/site.css
@@ -124,7 +124,7 @@ html, body {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 99;
+    z-index: 101;
 
     visibility: collapse;
 }
@@ -136,7 +136,7 @@ html, body {
 
 .floating .panel {
 
-    z-index: 100;
+    z-index: 102;
 
     position: absolute;
     background-color: var(--crush40-gray);
@@ -217,7 +217,7 @@ html, body {
     width: 100%;
     height: 80px;
     background-color: rgb(0, 0, 0, 0.4);
-    z-index: 1;
+    z-index: 100;
 
     display: grid;
     grid-template-rows: auto;
